# abc

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  Makefile  WORKSPACE
.github/workflows/: build-posix-bazel.yml  build-posix-cmake.yml
src/aig/aig/: aigCanon.c
src/aig/gia/: gia.h  giaBidec.c  giaCut.c  giaResub2.c  giaRex.c  giaTransduction.h
src/base/abc/: abc.h
src/base/abci/: abc.c  abcBidec.c  abcDec.c  abcIf.c  abcMap.c  abcPrint.c
src/base/cba/: cbaReadVer.c
src/base/io/: io.c  ioAbc.h  ioJsonc.c  ioReadCoords.c  module.make
src/base/main/: abcapis.h  main.h  mainFrame.c  mainInt.h
src/bool/bdc/: bdcCore.c
src/map/amap/: amapMatch.c
src/map/if/: if.h  ifDec16.c  ifDec66.c  ifMan.c  ifTime.c  ifUtil.c
src/map/mapper/: mapper.h  mapperCreate.c  mapperInt.h  mapperTime.c
src/map/scl/: scl.c  sclLiberty.c
src/misc/util/: abc_global.h  utilPrefix.cpp
src/misc/vec/: vecMem.h  vecWec.h
src/opt/mfs/: mfsCore.c
src/opt/nwk/: nwkBidec.c  nwkMan.c
src/proof/abs/: absVta.c
src/proof/live/: kliveness.c
src/sat/cadical/: cadical_arena.cpp
src/sat/glucose/: Glucose.cpp
src/sat/glucose2/: Glucose2.cpp
